--- a/ckanext/jsonschema/templates/iso/description.html
+++ b/ckanext/jsonschema/templates/iso/description.html
@@ -45,21 +45,24 @@ Data {{date ['dateType']}}: {{ date['date'] }}
 	dataQualityInfo.lineage and
 	dataQualityInfo.lineage.statement %}
 **Data lineage:**
+
 {{dataQualityInfo.lineage.statement}}
 {% endif %}
 
 {% if dataIdentification.citation and
 		dataIdentification.citation.otherCitationDetails %}
 **Citation:**
+
 {{ dataIdentification.citation.otherCitationDetails }}
 {% endif %}
 
 {% if dataIdentification.resourceConstraints %}
 **Resource constraints:**
+
 	{% for constraint in dataIdentification.resourceConstraints  %}
 		{% if dataIdentification.resourceConstraints.otherConstraints %}
 			{% for other in dataIdentification.resourceConstraints.otherConstraints %}
-{{constraints}}
+{{other}}
 			{% endfor %}
 		{% endif %}
 	{% endfor %}
@@ -67,6 +70,7 @@ Data {{date ['dateType']}}: {{ date['date'] }}
 
 {% if resources %}
 **Online resources:**
+
 	{% for resource in resources %}
 		{% set resource_type = h.jsonschema_get_resource_type(resource) %}
 		{% if resource_type == 'online-resource' %}
