--- a/ckanext/jsonschema/templates/iso/description.html
+++ b/ckanext/jsonschema/templates/iso/description.html
@@ -30,19 +30,25 @@
 **Contact points:**
 {% for resource in resources %}
 	{% set resource_type = h.jsonschema_get_resource_type(resource) %}
-	{% if resource_type == 'resource-contact' or
-			resource_type == 'resource-maintainer' or
-				resource_type == 'point-of-contact' or
-				resource_type == 'metadata-contact' or
-				resource_type == 'cited-responsible-party' %}
-		{% set contact = h.jsonschema_get_resource_body(resource) %}
-		{% if contact.contactInfo %}
-			{% if contact.contactInfo.address
-				and contact.contactInfo.address.electronicMailAddress %}
-{{contact.role|capitalize}}: [{{contact.individualName}}](mailto:{{contact.contactInfo.address.electronicMailAddress}}) {{contact.organisationName}}
-			{% else %}
-{{contact.role|capitalize}}: {{contact.individualName}} {{contact.organisationName}}
-			{% endif %}
+	{% set contact = h.jsonschema_get_resource_body(resource) %}
+	{% set _label = resource_type %}
+	{% if resource_type == 'resource-contact' %}
+		{% set _label = 'Contact' %}
+	{% elif resource_type == 'resource-maintainer' %}
+		{% set _label = 'Maintainer' %}
+	{% elif resource_type == 'point-of-contact' %}
+		{% set _label = 'Point of contact' %}
+	{% elif resource_type == 'metadata-contact' %}
+		{% set _label = 'Metadata contact' %}
+	{% elif resource_type == 'cited-responsible-party' %}
+		{% set _label = 'Cited contact' %}
+	{% endif %}
+	{% if contact.contactInfo %}
+		{% if contact.contactInfo.address
+			and contact.contactInfo.address.electronicMailAddress %}
+{{_label}}: [{{contact.individualName}}](mailto:{{contact.contactInfo.address.electronicMailAddress}}) {{contact.organisationName}}
+		{% else %}
+{{_label}}: {{contact.individualName}} {{contact.organisationName}}
 		{% endif %}
 	{% endif %}
 {% endfor %}
