--- a/ckanext/jsonschema/templates/package/snippets/resource_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/resource_form.html
@@ -58,10 +58,26 @@
           <label for="field-{{TYPE_KEY}}">Which type</label>
           <select id="field-{{TYPE_KEY}}" name="{{TYPE_KEY}}"  onChange="jsonschema.reload(value, editor = true, keep_old = false);">
             {% for resource_type in resource_types %}
+              {% set _label = resource_type %}
+              {% if resource_type == 'resource-contact' %}
+                {% set _label = 'Contact' %}
+              {% elif resource_type == 'graphic-overview' %}
+                  {% set _label = 'Graphic overview' %}
+              {% elif resource_type == 'online-resource' %}
+                {% set _label = 'Online resource' %}
+              {% elif resource_type == 'resource-maintainer' %}
+                {% set _label = 'Maintainer' %}
+              {% elif resource_type == 'point-of-contact' %}
+                {% set _label = 'Point of contact' %}
+              {% elif resource_type == 'metadata-contact' %}
+                {% set _label = 'Metadata contact' %}
+              {% elif resource_type == 'cited-responsible-party' %}
+                {% set _label = 'Cited contact' %}
+              {% endif %}
               {% if resource_type == schema_type %}
-                <option value="{{ resource_type }}" selected>{{ resource_type }}</option>
+                <option value="{{ resource_type }}" selected>{{ _label }}</option>
               {% else %}
-                <option value="{{ resource_type }}" >{{ resource_type }}</option>
+                <option value="{{ resource_type }}" >{{ _label }}</option>
               {% endif %}
             {% endfor %}
           </select>
