iso: distributor fix and more

--- a/ckanext/jsonschema/templates/iso/description.html
+++ b/ckanext/jsonschema/templates/iso/description.html
@@ -40,8 +40,8 @@
 	  {% set _label = 'Online resource' %}
 	{% elif resource_type == 'resource-maintainer' %}
 	  {% set _label = 'Maintainer' %}
-	{% elif resource_type == 'point-of-contact' %}
-	  {% set _label = 'Point of contact' %}
+	{% elif resource_type == 'distributor' %}
+	  {% set _label = 'Distributor' %}
 	{% elif resource_type == 'metadata-contact' %}
 	  {% set _label = 'Metadata contact' %}
 	{% elif resource_type == 'cited-responsible-party' %}
