Removed CKAN's default license fields from ISO packages; Creating core schema (license) at startup

--- a/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
@@ -47,8 +47,12 @@
 
 {% block package_basic_fields_license %}
   
+  {% if jsonschema %}
+      
+  {% else %}
   {{super()}}
-  
+  {% endif %}
+
 {% endblock %}
 
 {% block package_basic_fields_org %}
