Implemented license in importer

--- a/ckanext/jsonschema/templates/source/importer.html
+++ b/ckanext/jsonschema/templates/source/importer.html
@@ -41,6 +41,24 @@
         </select>
     </p>
     
+        
+    {% block package_basic_fields_license %}
+    {% set existing_license_id = 'CC-BY-NC-SA-3.0-IGO' %}
+    <div class="form-group">
+        <label class="control-label" for="field-license">{{ _("License") }}</label>
+        <div class="controls">
+        <div class="row">
+            <div class="col-md-6">
+            <select id="field-license" name="license_id" data-module="autocomplete">
+                {% for license_id, license_desc in h.license_options(existing_license_id) %}
+                <option value="{{ license_id }}" {% if existing_license_id == license_id %}selected="selected"{% endif %}>{{ license_desc }}</option>
+                {% endfor %}
+            </select>
+            </div>
+        </div>
+        </div>
+    </div>
+    {% endblock %}
 
     {% set organizations_available = h.organizations_available('create_dataset') %}
     <p>
