FIX "previous" button in new ISO package view

--- a/ckanext/jsonschema/templates/package/snippets/resource_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/resource_form.html
@@ -133,3 +133,6 @@
   {% endif %}
 {% endblock %}
 
+{% block previous_button %}
+  {% link_for _('Previous'), controller='package', action='edit', named_route=dataset_type + '_edit', id=pkg_name, class_='btn btn-default' %}
+{% endblock %}
