Removed complete override of form.html and implemented custom macro for error reporting; Implemented validation API

--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -1,12 +1,24 @@
+{% import 'macros/custom_form.html' as custom_form %}
 {% ckan_extends %}
 
+  {% if h.jsonschema_get_dataset_type() in h.jsonschema_handled_dataset_types() %}
+    {% set jsonschema = true %}
+  {% endif %}
 
 
   {% block stages %}
-    {% if h.jsonschema_get_dataset_type() in h.jsonschema_handled_dataset_types() %}
+    {% if jsonschema %}
     <!-- Hide breadcrumb -->
     {% else %}     
       {{super()}}
+    {% endif %}
+  {% endblock %}
+
+  {% block errors %}
+    {% if jsonschema %}
+      {{ custom_form.custom_errors(error_summary) }}
+    {% else %}
+      {{ form.errors(error_summary) }}
     {% endif %}
   {% endblock %}
 
