--- a/ckanext/jsonschema/templates/iso/description.html
+++ b/ckanext/jsonschema/templates/iso/description.html
@@ -30,7 +30,7 @@
 **Contact points:**
 {% for resource in resources %}
 	{% set resource_type = h.jsonschema_get_resource_type(resource) %}
-	{% set contact = h.jsonschema_get_resource_body(resource) %}
+	{% set resource_body = h.jsonschema_get_resource_body(resource) %}
 	{% set _label = resource_type %}
 	{% if resource_type == 'resource-contact' %}
 	  {% set _label = 'Contact' %}
@@ -47,12 +47,12 @@
 	{% elif resource_type == 'cited-responsible-party' %}
 	  {% set _label = 'Cited contact' %}
 	{% endif %}
-	{% if contact.contactInfo %}
-		{% if contact.contactInfo.address
-			and contact.contactInfo.address.electronicMailAddress %}
-{{_label}}: [{{contact.individualName}}](mailto:{{contact.contactInfo.address.electronicMailAddress}}) {{contact.organisationName}}
+	{% if resource_body.contactInfo %}
+		{% if resource_body.contactInfo.address
+			and resource_body.contactInfo.address.electronicMailAddress %}
+{{_label}}: [{{resource_body.individualName}}](mailto:{{resource_body.contactInfo.address.electronicMailAddress}}) {{resource_body.organisationName}}
 		{% else %}
-{{_label}}: {{contact.individualName}} {{contact.organisationName}}
+{{_label}}: {{resource_body.individualName}} {{resource_body.organisationName}}
 		{% endif %}
 	{% endif %}
 {% endfor %}
@@ -94,11 +94,11 @@
 	{% for resource in resources %}
 		{% set resource_type = h.jsonschema_get_resource_type(resource) %}
 		{% if resource_type == 'online-resource' %}
-			{% set body = h.jsonschema_get_resource_body(resource) %}
-			{% if body.protocol %}
-				{% if body.protocol.lower() == 'www:link-1.0-http--link' %}
+			{% set resource_body = h.jsonschema_get_resource_body(resource) %}
+			{% if resource_body.protocol %}
+				{% if resource_body.protocol.lower() == 'www:link-1.0-http--link' %}
 [{{resource.description or resource.name}}]({{resource.url}})
-				{% elif body.protocol.lower() == 'www:download-1.0-http--download' %}
+				{% elif resource_body.protocol.lower() == 'www:download-1.0-http--download' %}
 [{{resource.description or resource.name}}]({{resource.url}})
 				{% endif %}
 			{% endif %}
