--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -60,18 +60,15 @@
   {% block metadata_fields %}
     {% if h.jsonschema_get_dataset_type() in h.jsonschema_handled_dataset_types() %}
 
-      {% set extras = h.jsonschema_resolve_extras(data) %}
-
       {% set TYPE_KEY = h.jsonschema_get_type_key() %}
       {% set BODY_KEY = h.jsonschema_get_body_key() %}
       {% set OPT_KEY = h.jsonschema_get_opt_key() %}
       {% set VERSION_KEY = h.jsonschema_get_version_key() %}
-
-
-      {% set schema_type = extras[TYPE_KEY] %}
-      {% set body = extras[BODY_KEY] %}
-      {% set opt = extras[OPT_KEY] %}
-      {% set version = extras[VERSION_KEY] %}
+      
+      {% set schema_type = h.jsonschema_get_dataset_type(data) %}
+      {% set body = h.jsonschema_as_json(h.jsonschema_get_dataset_body(data)) %}
+      {% set opt = h.jsonschema_as_json(h.jsonschema_get_dataset_opt(data)) %}
+      {% set version = h.jsonschema_get_dataset_version(data) %}
 
       {% set schema = h.jsonschema_get_schema(schema_type) %}
       
