--- a/ckanext/jsonschema/templates/package/snippets/resource_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/resource_form.html
@@ -54,23 +54,29 @@
 
     {% if jsonschema is defined %}
 
-      {% set extras = h.jsonschema_resolve_resource_extras(dataset_type, data) %}
-
       {% set TYPE_KEY = h.jsonschema_get_type_key() %}
       {% set BODY_KEY = h.jsonschema_get_body_key() %}
       {% set OPT_KEY = h.jsonschema_get_opt_key() %}
       {% set VERSION_KEY = h.jsonschema_get_version_key() %}
 
+      {% if c.action == 'new_resource' %}
+        {% set schema_type = resource_types[0] %}
+        {% set body = h.jsonschema_get_template(schema_type) %}
+        {% set opt = h.jsonschema_as_json(h.jsonschema_get_opt()) %}
+        {% set version = h.jsonschema_get_version() %}
+      {% else %}
+        {% set schema_type = h.jsonschema_get_resource_type(data) %}
+        {% set body = h.jsonschema_as_json(h.jsonschema_get_resource_body(data)) %}
+        {% set opt = h.jsonschema_as_json(h.jsonschema_get_resource_opt(data)) %}
+        {% set version = h.jsonschema_get_resource_version(data) %}
+      {% endif %}
 
-      {% set schema_type = extras[TYPE_KEY] %}
-      {% set body = extras[BODY_KEY] %}
-      {% set opt = extras[OPT_KEY] %}
-      {% set version = extras[VERSION_KEY] %}
+      
 
       {% set schema = h.jsonschema_get_schema(schema_type) %}
       
       <div class="input-group">
-        <input id="field-extras-0-value" name="{{BODY_KEY}}" value="{{body}}"" type="hidden" class="form-control"/>
+        <input id="field-extras-0-value" name="{{BODY_KEY}}" value="{{body}}" type="hidden" class="form-control"/>
         <p>
           <label for="field-{{TYPE_KEY}}">Resource type</label>
           <select id="field-{{TYPE_KEY}}" name="{{TYPE_KEY}}"  onChange="jsonschema.reload(value, editor = true, keep_old = false);">
