--- a/ckanext/jsonschema_dashboard/templates/view_template.html
+++ b/ckanext/jsonschema_dashboard/templates/view_template.html
@@ -6,9 +6,9 @@
 
 
 {% block resource_view %}
-<div>
-    
-</div>
+
+    {% set OPT_KEY = h.jsonschema_get_opt_key() %}
+
 
     <div style="display: flex;justify-content: space-evenly;align-items: baseline;">
         <h2>Dataset: {{ package.name }}</h2>
@@ -22,6 +22,6 @@
         </a>
     </div>
     <div style="display:block; width: auto; height: auto;">
-        <iframe style="display: block;width: 100%; height: 100%; min-height: 94vh;" src="{{config_view.base_url}}?clean&{{h.url_for('terriajs.config_enabled', resource_view_id=resource_view.id, _external=True)}}" allowFullScreen mozAllowFullScreen webkitAllowFullScreen/>
+        <iframe style="display: block;width: 100%; height: 100%; min-height: 94vh;" src="{{config_view[OPT_KEY]['base_url']}}?api={{h.url_for('jsonschema.get_view_body', package_id=package['id'], resource_id=resource['id'], view_id=resource_view['id'], _external=True)}}" allowFullScreen mozAllowFullScreen webkitAllowFullScreen/>
     </div>
 {% endblock %}
