--- a/ckanext/jsonschema/templates/iso/description.html
+++ b/ckanext/jsonschema/templates/iso/description.html
@@ -47,7 +47,7 @@
 	{% elif resource_type == 'cited-responsible-party' %}
 	  {% set _label = 'Cited contact' %}
 	{% endif %}
-	{% if resource_body.contactInfo %}
+	{% if resource_body and resource_body.contactInfo %}
 		{% if resource_body.contactInfo.address
 			and resource_body.contactInfo.address.electronicMailAddress %}
 {{_label}}: [{{resource_body.individualName}}](mailto:{{resource_body.contactInfo.address.electronicMailAddress}}) {{resource_body.organisationName}}
