Configured jsonschema in registry; Configured and align STAC; Updated modular fields

--- a/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_basic_fields.html
@@ -37,7 +37,7 @@
 {% endblock %}
 
 {% block package_basic_fields_license %}
-  {% if h.jsonschema_is_supported_ckan_field(package_type, 'license') %}
+  {% if h.jsonschema_is_supported_ckan_field(package_type, 'license_id') %}
     {{super()}}
   {% endif %}
 {% endblock %}
