FIX reload jsonschema type for resources; url quote helper

--- a/ckanext/jsonschema/templates/package/snippets/package_form.html
+++ b/ckanext/jsonschema/templates/package/snippets/package_form.html
@@ -30,6 +30,8 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
         <link rel="stylesheet" href="https://unpkg.com/@trevoreyre/autocomplete-js/dist/style.css"/>
 
+        <script src="https://unpkg.com/vanilla-picker@2"></script>
+
         <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
         <!-- Markdown -->
         <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
